--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.0.2",
     "cross-env": "^7.0.3",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.5.2",
+    "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
     "react-icon": "^1.0.0",
+    "react-offcanvas": "^0.4.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
